test(controller): update application timeline tests
Refactor test cases for ApplicationTimelineController.

Updated event types and response DTOs for better clarity.

Removed unnecessary test cases and improved mock service usage.