@@ -1,10 +1,19 @@
 package com.nick.job_application_tracker.controller;
 
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.doNothing;
+import static org.mockito.Mockito.when;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
+
 import java.time.LocalDateTime;
-import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
 
 import org.junit.jupiter.api.Test;
-import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
@@ -13,170 +22,90 @@ import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.FilterType;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
-import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.nick.job_application_tracker.config.filter.CustomJwtAuthFilter;
-import com.nick.job_application_tracker.dto.ApplicationTimelineCreateDTO;
-import com.nick.job_application_tracker.service.inter_face.ApplicationTimelineService;
+import com.nick.job_application_tracker.dto.create.ApplicationTimelineCreateDTO;
+import com.nick.job_application_tracker.dto.detail.ApplicationTimelineDetailDTO;
+import com.nick.job_application_tracker.dto.response.ApplicationTimelineResponseDTO;
+import com.nick.job_application_tracker.model.ApplicationTimeline;
+import com.nick.job_application_tracker.service.implementation.ApplicationTimelineService;
 
-import jakarta.persistence.EntityNotFoundException;
-
-@WebMvcTest(controllers = ApplicationTimelineController.class,
-        excludeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = CustomJwtAuthFilter.class))
+@WebMvcTest(
+    controllers = ApplicationTimelineController.class,
+    excludeFilters = @ComponentScan.Filter(type = FilterType.ASSIGNABLE_TYPE, classes = CustomJwtAuthFilter.class)
+)
 @AutoConfigureMockMvc(addFilters = false)
 class ApplicationTimelineControllerTest {
+
+    private static final UUID JOB_APP_ID = UUID.fromString("00000000-0000-0000-0000-000000000301");
+    private static final UUID TIMELINE_ID = UUID.fromString("00000000-0000-0000-0000-000000000302");
 
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
-    private ApplicationTimelineService service;
-
     @Autowired
     private ObjectMapper objectMapper;
 
+    @MockBean
+    private ApplicationTimelineService service;
+
     @Test
     void testGetForJob() throws Exception {
-        Long jobAppId = 1L;
-        ApplicationTimelineCreateDTO dto = new ApplicationTimelineCreateDTO();
-        dto.setId(100L);
-        dto.setEventType("PHONE_SCREEN");
+        ApplicationTimelineResponseDTO dto = new ApplicationTimelineResponseDTO();
+        dto.setId(TIMELINE_ID);
+        dto.setEventType(ApplicationTimeline.EventType.SUBMITTED);
         dto.setEventTime(LocalDateTime.of(2025, 6, 1, 12, 30));
         dto.setDescription("Phone call with recruiter");
-        dto.setJobApplicationId(jobAppId);
 
-        Mockito.when(service.getByJobAppId(jobAppId)).thenReturn(Collections.singletonList(dto));
+        when(service.getByJobAppId(JOB_APP_ID)).thenReturn(List.of(dto));
 
-        mockMvc.perform(get("/api/timelines/job/{jobAppId}", jobAppId))
-               .andExpect(status().isOk())
-               .andExpect(jsonPath("$[0].id").value(100L))
-               .andExpect(jsonPath("$[0].eventType").value("PHONE_SCREEN"))
-               .andExpect(jsonPath("$[0].description").value("Phone call with recruiter"))
-               .andExpect(jsonPath("$[0].jobApplicationId").value(jobAppId));
+        mockMvc.perform(get("/api/timelines/job/{jobAppId}", JOB_APP_ID))
+            .andExpect(status().isOk())
+            .andExpect(jsonPath("$[0].id").value(TIMELINE_ID.toString()))
+            .andExpect(jsonPath("$[0].eventType").value("SUBMITTED"))
+            .andExpect(jsonPath("$[0].description").value("Phone call with recruiter"));
     }
 
     @Test
     void testCreate() throws Exception {
         ApplicationTimelineCreateDTO request = new ApplicationTimelineCreateDTO();
-        request.setEventType("INTERVIEW");
+        request.setEventType(ApplicationTimeline.EventType.UPDATED);
         request.setEventTime(LocalDateTime.of(2025, 6, 2, 14, 0));
         request.setDescription("Technical interview");
-        request.setJobApplicationId(2L);
+        request.setJobApplicationId(JOB_APP_ID);
 
-        ApplicationTimelineCreateDTO response = new ApplicationTimelineCreateDTO();
-        response.setId(101L);
+        ApplicationTimelineDetailDTO response = new ApplicationTimelineDetailDTO();
+        response.setId(TIMELINE_ID);
         response.setEventType(request.getEventType());
         response.setEventTime(request.getEventTime());
         response.setDescription(request.getDescription());
-        response.setJobApplicationId(request.getJobApplicationId());
+        response.setJobApplicationId(JOB_APP_ID);
 
-        Mockito.when(service.save(Mockito.any(ApplicationTimelineCreateDTO.class))).thenReturn(response);
+        when(service.create(any(ApplicationTimelineCreateDTO.class))).thenReturn(response);
 
         mockMvc.perform(post("/api/timelines")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-               .andExpect(status().isOk())
-               .andExpect(jsonPath("$.id").value(101L))
-               .andExpect(jsonPath("$.eventType").value("INTERVIEW"))
-               .andExpect(jsonPath("$.description").value("Technical interview"))
-               .andExpect(jsonPath("$.jobApplicationId").value(2L));
+                .contentType(MediaType.APPLICATION_JSON)
+                .content(objectMapper.writeValueAsString(request)))
+            .andExpect(status().isCreated())
+            .andExpect(jsonPath("$.id").value(TIMELINE_ID.toString()))
+            .andExpect(jsonPath("$.eventType").value("UPDATED"))
+            .andExpect(jsonPath("$.jobApplicationId").value(JOB_APP_ID.toString()));
     }
 
     @Test
     void testDelete() throws Exception {
-        Long idToDelete = 103L;
-        Mockito.doNothing().when(service).delete(idToDelete);
+        doNothing().when(service).delete(TIMELINE_ID);
 
-        mockMvc.perform(delete("/api/timelines/{id}", idToDelete))
-               .andExpect(status().isNoContent());
+        mockMvc.perform(delete("/api/timelines/{id}", TIMELINE_ID))
+            .andExpect(status().isNoContent());
     }
 
     @Test
-    void testGetForJob_NotFound() throws Exception {
-        Long jobAppId = 99L;
-
-        Mockito.when(service.getByJobAppId(jobAppId))
-            .thenThrow(new EntityNotFoundException("Job Application not found"));
-
-        mockMvc.perform(get("/api/timelines/job/{jobAppId}", jobAppId))
-            .andExpect(status().isNotFound());
-    }
-
-    @Test
-    void testCreate_BadRequest_MissingFields() throws Exception {
-        // Missing eventType, eventTime, jobApplicationId
-        String invalidJson = """
-            {
-                "description": "Missing required fields"
-            }
-        """;
-
+    void testCreateBadRequestForMissingFields() throws Exception {
         mockMvc.perform(post("/api/timelines")
                 .contentType(MediaType.APPLICATION_JSON)
-                .content(invalidJson))
+                .content("{\"description\":\"Missing required fields\"}"))
             .andExpect(status().isBadRequest());
     }
-
-    @Test
-    void testCreate_BadRequest_InvalidJsonSyntax() throws Exception {
-        String brokenJson = "{ \"eventType\": \"INTERVIEW\", "; // malformed JSON
-
-        mockMvc.perform(post("/api/timelines")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(brokenJson))
-            .andExpect(status().isBadRequest());
-    }
-
-
-    @Test
-    void testCreate_BadRequest_WrongTypes() throws Exception {
-        // eventTime is expected to be a datetime, not a string
-        String invalidJson = """
-            {
-                "eventType": "INTERVIEW",
-                "eventTime": "not-a-date",
-                "description": "Invalid date",
-                "jobApplicationId": 2
-            }
-        """;
-
-        mockMvc.perform(post("/api/timelines")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(invalidJson))
-            .andExpect(status().isBadRequest());
-    }
-
-    @Test
-    void testCreate_InternalServerError() throws Exception {
-        ApplicationTimelineCreateDTO dto = new ApplicationTimelineCreateDTO();
-        dto.setEventType("INTERVIEW");
-        dto.setEventTime(LocalDateTime.now());
-        dto.setDescription("Oops");
-        dto.setJobApplicationId(1L);
-
-        Mockito.when(service.save(Mockito.any(ApplicationTimelineCreateDTO.class))).thenThrow(new RuntimeException("Unexpected error"));
-
-        mockMvc.perform(post("/api/timelines")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(dto)))
-            .andExpect(status().isInternalServerError());
-    }
-
-    @Test
-    void testDelete_NotFound() throws Exception {
-        Long idToDelete = 404L;
-
-        Mockito.doThrow(new EntityNotFoundException("Timeline not found"))
-            .when(service).delete(idToDelete);
-
-        mockMvc.perform(delete("/api/timelines/{id}", idToDelete))
-            .andExpect(status().isNotFound());
-    }
-
-
 }
